[tool.poetry]
name = "mitm_wifi"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mitm_wifi"}]

[tool.poetry.scripts]
mitm_wifi = "mitm_wifi.cli:exec"

[tool.poetry.dependencies]
python = "^3.9"
pyudev = "^0.24.1"
typer = "^0.9.0"
jinja2 = "^3.1.2"
netaddr = "^0.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
pyudev = "^0.24.1"
pydantic = "^1.10.7"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
