[tool.poetry]
name = "mitm_wifi"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mitm_wifi"}]

[tool.poetry.scripts]
mitm = "mitm_wifi.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
pyudev = "^0.24.1"
jinja2 = "^3.1.2"
netaddr = "^0.8.0"
pyroute2 = "^0.7.8"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
pyudev = "^0.24.1"
pydantic = "^1.10.7"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
